--- a/pluralsight-vscode-samples-master/tsplay/src/client/app/dashboard/dashboard.html
+++ b/pluralsight-vscode-samples-master/tsplay/src/client/app/dashboard/dashboard.html
@@ -1,4 +1,5 @@
 <section id="dashboard-view" class="mainbar">
+    <div></div>
     <section class="matter">
         <div class="container">
             <div class="row">
